--- a/index.html
+++ b/index.html
@@ -12,22 +12,30 @@
 
 
 
-<h1>archive GE</h1>
+<h1>loup (@loupgraou)</h1>
+  <p>Hi, that’s not my real name.</p>
+  <p>Five years ago, I stopped drawing.</p>
+  <p>I need to practice.</p>
+  <p>I will draw 7 hands on a random piece of paper.</p>
+  <p>Then, I will draw one hand each day in my sketchbook to track my progress.</p>
+
+<br>
+
+<p>> my progress </p>
+>>>>>>>>> <a href="progress/hand.html">click</a>
+
+<br>
+
+<p>I keep up with English and Italian news.</p>
+
+<a href=#Italian>Italian</a>
+<a href=#English>English</a>
+
+<h3 id="italian">Italian</h3>
 
 
 
-  <a href="stockage/stockage.html"><img src="../images/fish.png" height="150vh" alt="a nice fish"></a>
-  <br>
-
-  <nav>
-    <div class="topnav">
-        <a class="active" href="notices/notices.html">blog</a>
-      </div>
-  </nav>
-
-
-
-
+<h3 id="italian">English</h3>
 
 <!--------- footer -------->
 
@@ -35,28 +43,6 @@
 <footer>
 </footer>
 
-<div class="cursor">
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  </div>
 
   <script src="js/myscripts.js"></script>
 </body>
