--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-
-
-<h1>loup (@loupgraou)</h1>
+  <div class="container">
+    <div class="column">
+      <h1 id="animated-title">loup (@loupgraou)</h1>
   <p>Hi, that’s not my real name.</p>
   <p>Five years ago, I stopped drawing.</p>
   <p>I need to practice.</p>
@@ -20,10 +20,10 @@
   <p>Then, I will draw one hand each day in my sketchbook to track my progress.</p>
 
 <br>
+*************
+<p> my progress : <a href="progress/hand.html">click</a></p>
 
-<p>> my progress </p>
->>>>>>>>> <a href="progress/hand.html">click</a>
-
+*************
 <br>
 
 <p>I keep up with English and Italian news.</p>
@@ -31,11 +31,34 @@
 <a href=#Italian>Italian</a>
 <a href=#English>English</a>
 
-<h3 id="italian">Italian</h3>
 
 
 
-<h3 id="italian">English</h3>
+
+
+
+
+
+
+
+    </div>
+    
+    <div class="column">
+      <h3 id="italian" id="animated-title">Italian</h3>
+
+
+
+    </div>
+    <div class="column">
+      <h3 id="italian">English</h3>
+
+
+
+    </div>
+</div>
+
+
+
 
 <!--------- footer -------->
 
