--- a/index copy.html
+++ b/index copy.html
@@ -12,14 +12,26 @@
 
   <div class="container">
     <div class="column">
-      <h1 id="animated-title">loup (@4nk1)</h1>
-  <p>learning 2d fx animation</p>
+      <h1 id="animated-title">loup (@loupgraou)</h1>
+  <p>Hi, that’s not my real name.</p>
+  <p>Five years ago, I stopped drawing.</p>
+  <p>I need to practice.</p>
+  <p>I will draw 7 hands on a random piece of paper.</p>
+  <p>Then, I will draw one hand each day in my sketchbook to track my progress.</p>
+
 <br>
-  <p>yt channel : @4nk1</p>
-  <p>twitter : @loupgraou</p>
-  <p>ig : @loup.graou</p>
+*************
+<p> my progress : <a href="progress/hand.html">click</a></p>
+
+*************
 <br>
-  <p>I'm French</p>
+
+<p>I keep up with English and Italian news.</p>
+
+<a href=#Italian>Italian</a>
+<a href=#English>English</a>
+
+
 
 
 
@@ -33,11 +45,11 @@
     
     <div class="column">
       <br>
-      <p>2d fx</p>
+      <p>italian</p>
     </div>
     <div class="column">
       <br>
-      <h3 id="english">stream</h3>
+      <h3 id="english">english</h3>
 
 
 
