deux nouvelles pages

--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
   <p>I'm French</p>
 
 
-
-
-
-
-
-
-
     </div>
     
     <div class="column">
@@ -37,11 +30,18 @@
     </div>
     <div class="column">
       <br>
-      <h3 id="english">stream</h3>
-
-
+      <h3 id="english"><a href="blog/blog.html">blog</a></h3>
 
     </div>
+  </div>
+    
+  <div class="column">
+    <br>
+  <a href="blog/blog2.0.html">credits</a>
+
+
+
+  </div>
 </div>
 
 
