--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
 </head>
 <body>
 
+
+
+  
   <div class="container">
     <div class="column">
       <h1 id="animated-title">loup (@4nk1)</h1>
-  <p>learning 2d fx animation</p>
+  <p>*learning* 2d fx animation</p>
 <br>
   <p>yt channel : @4nk1</p>
   <p>twitter : @loupgraou</p>
   <p>ig : @loup.graou</p>
 <br>
-  <p>I'm French</p>
+  <p>french</p>
 
 
     </div>
     
     <div class="column">
       <br>
-      <p>2d fx</p>
+      <p><a href="blog/notes.html">notes.html</a></p>
     </div>
     <div class="column">
       <br>
